// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`creates a mock Integration Fields field model 1`] = `
[
  {
    "config": {
      "catalog": "sem_viverra",
      "label": "Enim",
    },
    "type": "IntegrationFields",
  },
  {
    "config": {
      "catalog": "sem_viverra",
      "label": "Enim",
    },
    "type": "IntegrationFields",
  },
]
`;

exports[`supports number seed 1`] = `
[
  {
    "config": {
      "catalog": "aliquam_ut",
      "label": "Egestas",
    },
    "type": "IntegrationFields",
  },
  {
    "config": {
      "catalog": "aliquam_ut",
      "label": "Egestas",
    },
    "type": "IntegrationFields",
  },
]
`;
